# pynapple-learn

./: .buildinfo  README.html  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/pages/: index.doctree  page1.doctree  page2.doctree
.github/workflows/: documentation.yml
_sources/pages/: page1.md.txt
_static/example_thumbs/: timeseries.afdesign
doc/: conf.py  index.md  page1.md
doc/_static/: box.html  custom.css
doc/pages/: index.md  page1.md  page2.md
pages/: index.html  page1.html  page2.html
